--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 
+server.port: 8081
 
 spring:
   datasource:
@@ -9,3 +10,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-aito: update
+    properties:
+      hibernate.format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
